Apply suggestions from code review
Co-authored-by: Sebastian Krzyżanowski <eskrzy@gmail.com>

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -74,7 +74,7 @@
     "icon_latest": "Only show the latest snapshot",
     "icon_comparison": "Difference for the two latest snapshots",
     "icon_fetched_from": "Icon fetched from pathofexile.com",
-    "net_worth_session_started_at_tooltip": "Net worth session is started at",
+    "net_worth_session_started_at_tooltip": "Net worth session started at",
     "time_since_last_snapshot_tooltip": "Time since last snapshot",
     "income_based_on_session_duration": "Based on session duration",
     "income_based_on_last_pause": "Based on last pause",
@@ -91,7 +91,7 @@
     "income_based_on_last_offline_tooltip_short": "Since last offline",
     "income_based_on_last_inactive_tooltip_short": "Since last inactivity",
     "income_based_on_last_hour_tooltip_short": "Since last hour",
-    "critial_stashtyp_unique_tooltip": "Attention, a separate request is made for each item in the unique stashtab. This can significantly increase snapshot duration.",
+    "critical_stashtype_unique_tooltip": "Separate request is made for each category in the unique stash tab. This can significantly increase snapshot duration.",
     "critial_stashtyp_map_tooltip": "Attention, spearate requests are made for all tiles in the map stash tab, which are not atlas maps. This can significantly increase snapshot duration.",
     "no_rows_found": "No items found",
     "item_table_placeholder": "No items found for the selected profile, take a snapshot to begin (top right)",
