--- a/ExilenceNextApp/public/i18n/en/net_worth_stepper.json
+++ b/ExilenceNextApp/public/i18n/en/net_worth_stepper.json
@@ -1,7 +1,7 @@
 {
   "title": {
-    "motivation": "Welcome to net worth sessions!",
-    "initial_step": "What are net worth sessions",
+    "motivation": "Welcome to the Net Worth Sessions!",
+    "initial_step": "What are Net Worth Sessions",
     "income_switch": "Switch income",
     "session_duration_step": "Session duration section",
     "session_started_at_step": "Session start section",
